Changes made to some files

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			<div class="flow-box">
 
 				<div class="group-name">
-					<span class="title">My Process</span>
+					<span class="title">Services</span>
 					<hr>
 				</div>
 
@@ -336,7 +336,7 @@
 				<div>
 					<div class="port-top">
 						<div class="group-name">
-							<span class="title">Services</span>
+							<span class="title">Port-folio</span>
 							<hr>
 						</div>
 					</div>
@@ -361,8 +361,8 @@
 						    <div class="p-item">
 
 						    	<div class="p-left">
-						    		<span class="p-title">Learn Factory Nigeria</span>
-						    		<span class="p-title">Grooming Creator's <br/>& Software Engineers</span>
+						    		<span class="p-title">Learn Factory <br/>Nigeria</span>
+						    		<span class="p-title">Grooming Creator's & <br/>Software Engineers</span>
 						    		<a class="view-proj" href="https://learnfactory.com.ng" target="_blank">View Project</a>
 						    	</div>
 								<div class="p-right learnfactory">
@@ -427,12 +427,10 @@
 					</div>
 					<p>I strive hard to create designs from concept to implementation across multiple platforms, while constantly challenging myself and learning new skills and technology in  Front End Development and Graphics Design.</p>
 
-					<p>I love to create and build websites which are mobile-first ready, fully responsive, minimal, SEO friendly and at the same time attractive and user-friendly for individuals, startups, businesses etc. When I'm not debugging some code or trying to position elements right, I love to hang out with my friends, listen to good music that ease the mind, watching tech movies etc.</p>
+					<p>I love to create and build websites which are mobile-first ready, fully responsive, minimal, SEO friendly,attractive and user-friendly for individuals, startups, businesses etc. When I'm not debugging some code or trying to position elements right, I love to hang out with my friends, listen to good music that ease the mind, watching tech movies etc.</p>
 
 					<p>I have also teamed up with individuals on projects, some of which are <a href="https://farmerconnect.netlify.com" target="_blank">farmerconnect.netlify.com</a>, <a href="https://leozcreativez.com.ng" target="_blank">leozcreativez.com.ng</a>, 
-					<a href="https://learnfactory.com.ng" target="_blank">learnfactory.com.ng</a>.</p>
-
-					<p>I built a tip calculator for Nigerians, written in our Naija Pidgin Language. To view it you can log into my code pen account <a href="https://codepen.io/lakaJS/#" target="_blank">codepen.io</a>.</p>
+					<a href="https://learnfactory.com.ng" target="_blank">learnfactory.com.ng</a>. I built a tip calculator for Nigerians, written in our Naija Pidgin Language. To view it you can log into my code pen account <a href="https://codepen.io/lakaJS/#" target="_blank">codepen.io</a>.</p>
 
 					<p>My development tools includes but not limited to <span class="toolname">HTML5</span>, <span class="toolname">CSS3</span>, <span class="toolname">JavaScript</span>, <span class="toolname">Jquery</span>, <span class="toolname">Sass</span>, <span class="toolname">ReactJS</span>, <span class="toolname">Bootstrap</span>, <span class="toolname">Semantic UI</span>, <span class="toolname">Wordpress</span>, & <span class="toolname">Git</span>.
 					</p>
