Changes made to Laka port folio

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
 			<div class="process-note">
 				<div class="note">
-					<p>I ensure to understand the goals and context-of-use of potential users or customers, hence using the understanding to design a product, service, or app within the constraints of business and technology.</p>
+					<p>I ensure to understand the goals and context-of-use of potential users or customers, hence using the understanding to design a product, service, or app efficiently for business and technology.</p>
 
 					<div>
 						<div class="process-logo"><img src="assets/images/vs-code.png" alt="vs-code"></div>
